WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279363
[Cleanup] line-clamp change should not affect line layout path (inline vs. svg)
https://bugs.webkit.org/show_bug.cgi?id=279363
Summary
[Cleanup] line-clamp change should not affect line layout path (inline vs. svg)
alan
Reported
2024-09-09 08:40:46 PDT
ssia
Attachments
[fast-cq]Patch
(1.69 KB, patch)
2024-09-09 08:41 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-09 08:41:30 PDT
Created
attachment 472500
[details]
[fast-cq]Patch
EWS
Comment 2
2024-09-09 11:49:34 PDT
Committed
283355@main
(c46017768fd5): <
https://commits.webkit.org/283355@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472500
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-09-09 11:50:13 PDT
<
rdar://problem/135566580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug