[Cleanup] line-clamp change should not affect line layout path (inline vs. svg) https://bugs.webkit.org/show_bug.cgi?id=279363

Reviewed by Antti Koivisto.

* Source/WebCore/rendering/RenderDeprecatedFlexibleBox.cpp:
(WebCore::RenderDeprecatedFlexibleBox::styleWillChange):

Canonical link: https://commits.webkit.org/283355@main